--- a/src/noserv.create.html
+++ b/src/noserv.create.html
@@ -95,6 +95,7 @@ function sendMSG() {
     dc.send(value);
     addMSG(value, "me");
     $("#msg").val('');
+	  var t = setTimeout(sendMSG, 500);
   }
 
 }
