--- a/src/noserv.join.html
+++ b/src/noserv.join.html
@@ -11,7 +11,7 @@
 <textarea id="creater-sdp" placeholder="copy offers SDP here"></textarea>
 <h3> Create participantS SDP <button id="create">CREATE</button> </h3>
 <textarea id="joiner-sdp"></textarea>
-<h3> Cat area </h3>
+<h3> Chat area </h3>
 <div id="chat">
   <div id="chat-screen-wp">
     <div id="chat-screen"></div>
